--- a/MadgetzTestTheme.css
+++ b/MadgetzTestTheme.css
@@ -17,10 +17,10 @@
   --portalThemeColor10: #626161;
   --portalThemeColor11: ;
   --portalThemeColor12: ;
-  --portalThemeOnColor1: #E8272F;
-  --portalThemeOnColor2: #425cb8;
-  --portalThemeOnColor3: #425cb8;
-  --portalThemeOnColor4: #425cb8;
+  --portalThemeOnColor1: #731be3;
+  --portalThemeOnColor2: #7a649c;
+  --portalThemeOnColor3: #C8C8C8;
+  --portalThemeOnColor4: #73502d;
   --portalThemeOnColor5: #425cb8;
   --portalThemeOnColor6: #425cb8;
   --portalThemeOnColor7: #425cb8;
